plugins {
	id 'java'
	id 'org.springframework.boot' version '2.6.4'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'jacoco'
}

group = 'com.tera'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_11
	targetCompatibility = JavaVersion.VERSION_11
}

jacoco {
	toolVersion = '0.8.6'
}

test {
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	reports {
		html.required.set(true)
		csv.required.set(true)
		xml.required.set(false)
	}
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			enabled = true // 활성화
			element = 'CLASS' // 클래스 단위로 커버리지 체크
			// includes = []

			// 라인 커버리지 제한을 80%로 설정
			limit {
				counter = 'LINE'
				value = 'COVEREDRATIO'
				minimum = 0.80
			}

			// 브랜치 커버리지 제한을 80%로 설정
			limit {
				counter = 'BRANCH'
				value = 'COVEREDRATIO'
				minimum = 0.80
			}

			excludes = []
		}
	}
}


repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.retry:spring-retry'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
	implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
	implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	//swagger
	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.8.0'
	//cpu monitoring
	implementation group: 'com.github.oshi', name: 'oshi-core', version: '6.6.0'
	//h2
	implementation ('org.eclipse.dirigible:dirigible-database-h2:10.5.11') {
		exclude group: 'ch.qos.logback', module: 'logback-classic'
	}

	//JPA show Query
//	implementation("p6spy:p6spy:3.9.1")  jdbc:p6spy:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE p6spy추가
//	implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0")

	//testcode
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
	testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.11.0'

	testImplementation group: 'org.mockito', name: 'mockito-inline', version: '5.1.1'
	implementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.14.17'
	testImplementation group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.14.17'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
//	testRuntimeOnly 'com.h2database:h2'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.apache.logging.log4j:log4j-core:2.17.1'
	testImplementation 'org.apache.logging.log4j:log4j-api:2.17.1'

}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

configurations.all {
	exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
}